Abstract y propuesta de reparto de secciones

--- a/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
+++ b/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
@@ -7,7 +7,7 @@
 
 \title{Strategies for Haptic-Robotic Teleoperation in Board Games: Playing checkers with Baxter}
 
-\author{Gonzalo Est\'ebanez Costales, Camino Fernández Llamas, Francisco Jesús Rodr\'iguez, Laura Inyesta, Pablo, 
+\author{Gonzalo Esteban, Francisco J. Rodr\'{i}guez--Sedano, Laura Inyesta, Pablo Blanco, Francisco J. Rodr\'{i}guez--Lera
 \IEEEcompsocitemizethanks{\IEEEcompsocthanksitem Miguel Cazorla is with University of Alicante.\protect\\
 
 E-mail: miguel@dccia.ua.es
@@ -21,7 +21,7 @@ E-mail: miguel@dccia.ua.es
 
 
 \begin{abstract}
-The abstract goes here.
+Teleoperating robots is quite a common practice in fields such as surgery, defence or rescue. The main source of information in this kind of environments is the sense of sight. The user can see on a display what the robot is watching in real time, and maybe also a visual representation of the robot surroundings. Our proposal involves the use of haptic devices to teleoperate a robot, Baxter, in order for the user to obtain touch feedback besides visual information. As a proof of concept, the proposed environment is checkers playing. Our goal is testing if the inclusion of the sense of touch improves the user experience or not. 
 \end{abstract}
 
 
@@ -31,6 +31,7 @@ JoPhA, journal, \LaTeX, paper, template.
 
 
 \section{Introduction}
+% GONZALO?
 
 \IEEEPARstart{T}{his} demo file is intended to serve as a ``starter file''
 for JoPhA journal papers produced under \LaTeX\ using
@@ -41,6 +42,9 @@ I wish you the best of success.
 \hfill mds
  
 \hfill January 11, 2007
+
+\section{Environment description}
+% FRAN? + GONZALO?
 
 \subsection{Slave: Haptic Device}
 Haptic feedback takes advantage of the human sense of touch by recreating forces, vibrations or motions to the user. 
@@ -69,8 +73,7 @@ This is justified due to the relatively short length of this link and the fact t
 This  visual  compensation  is  also  used  to  mitigate  the  effects  of  motor backlash propagation through the robot, although solutions to reduce backlash are being attempted.
 
 \section{Experiment}
-
-\section{Experiment}
+% SEDANO ? + LAURA Y PABLO?
 
 \subsection{Game description}
 
@@ -81,19 +84,15 @@ The game consists on move a piece diagonally to an adjacent unoccupied square. I
 \subsection{Board adaptation}
 
 
-
-
-
-
-
 \section{Conclusion}
+% CAMINO?
+
 The conclusion goes here.
 
 
 \section*{Acknowledgment}
-Acknowlegments allways in this sections.
 
-The authors would like to thank...
+This work is supported by the \textit{C\'{a}tedra Telef\'{o}nica--Universidad de Le\'{o}n} and it has been partially funded by Spanish \textit{Ministerio de Econom\'{i}a y Competitividad} under grant DPI2013-40534-R.
 
 \begin{thebibliography}{1}
 
