--- a/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
+++ b/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
@@ -51,8 +51,6 @@ Haptic feedback takes advantage of the human sense of touch by recreating forces
 An haptic device allows to feel a feedback from virtual or real objects and produces a realistic touch sensations to a user. 
 The PHANToM Omni is a 6 DOF haptic device that applies haptic feedback. 
 
- 
-
 It has 3 actuated DOF associated to the armature which provides the translational movements (X, Y, and Z Cartesian coordinates) and other 3 non-actuated DOF associated to the gimball  that gives the orientation (pitch, roll and yaw rotational movements).  The characteristic of this device allow to offer a feedback up to a maximum of 3.3N.
 
 
@@ -73,7 +71,7 @@ This is justified due to the relatively short length of this link and the fact t
 This  visual  compensation  is  also  used  to  mitigate  the  effects  of  motor backlash propagation through the robot, although solutions to reduce backlash are being attempted.
 
 \section{Experiment}
-% SEDANO ? + LAURA Y PABLO?
+% SEDANO + LAURA Y PABLO?
 
 \subsection{Game description}
 
