Added more paragraphs to the evaluation section

--- a/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
+++ b/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
@@ -36,22 +36,29 @@ JoPhA, journal, \LaTeX, paper, template.
 % Teleoperation-telemanipulation and user experience
   \IEEEPARstart{T}{eleoperating} robots is quite a common practice in many fields such as surgery, defence or rescue~\cite{Vertut85}. The reason is simple: assisting a person to perform and accomplish complex or uncertain tasks in some environments may mean the difference between failure or success.
 
-  These systems use different interfaces (e.g. cameras, microphones or input devices) to provide sensory information to the operator, and thus, improving the user experience. Traditionally, video feedback from an on-board or front-mounted camera is limited by technical constraints~\cite{Woods04,Woods97} like a restricted field of view or poor resolution. In some scenarios, these constraints makes difficult for the operator to be aware of the robot's proximity to objects~\cite{Alfano90}, causing a decrease in performance. To alleviate such limitations, at least partially, haptic cues (either by force or tactile feedback) have been shown to be useful in some applications~\cite{Son13,Sitti03,Diolaiti02}, especially when the operator performs manipulation tasks~\cite{King09,Kron04,}.
+  Enhancing the user experience is a key aspect in teleoperation. These systems use different interfaces (e.g. cameras, microphones or input devices) to provide sensory information to the operator, and thus, improving the user experience. Traditionally, video feedback from an on-board or front-mounted camera is limited by technical constraints~\cite{Woods04,Woods97} like a restricted field of view or poor resolution. In some scenarios, these constraints makes difficult for the operator to be aware of the robot's proximity to objects~\cite{Alfano90}, causing a decrease in performance. To alleviate such limitations, at least partially, haptic cues (either by force or tactile feedback) have been shown to be useful in some applications~\cite{Son13,Sitti03,Diolaiti02}, especially when the operator performs manipulation tasks~\cite{King09,Kron04}.
   
 %   haptics must play a superior role over vision or audio.
-  
+  In recent years, haptic devices are playing a superior role over vision or audio, particularly in applications that involve touch.%...
+
 % Interfaces: haptics and delay
 %...
 
 % GOALS OF THE PAPER
+  The motivation behind this paper is to test whether or not the sense of touch improves the user experience in teleoperation. To achieve this, we propose an experiment: teleoperate a robot for playing a board game. The scenario will have two players and one game. One player is located at the game's place while the other is away, teleoperating a robot which is ``physically'' located at that same place. The teleoperation system consists of a Geomagic Touch haptic interface (that acts as a master device) and a Baxter robot (which acts as the slave device). The board game chosen to play is ``checkers'', as it is...
 
 % STRUCTURE
-  This paper is organized as follows. Section~\ref{sec:environment} shows the architecture of the environment by describing the basic elements of the system. Section~\ref{sec:experiment} describes how the experiment has been carried out.~\ldots The paper ends with our conclusions.
+  This paper is organized as follows. Section~\ref{sec:environment} shows the architecture of the environment by describing the basic elements of the system. Section~\ref{sec:experiment} describes how the experiment has been carried out.~\ldots Finally, the paper ends with our conclusions.
 
 \section{Environment description}
 \label{sec:environment}
 
 % FRAN? + GONZALO?
+
+% TELEMANIPULATION SYSTEMS AND BILATERAL TELEOPERATION. Highlight bilateral teleoperation using position [Kuchenbecker 2006].
+
+  A basic telemanipulation system consists of a master robot manipulated by an operator and a slave...
+  
 
 \subsection{Slave: Haptic Device}
 Haptic feedback takes advantage of the human sense of touch by recreating forces, vibrations or motions to the user. 
@@ -92,6 +99,50 @@ The game consists on move a piece diagonally to an adjacent unoccupied square. I
 \subsection{Board adaptation}
 
 
+\subsection{Evaluation}
+
+For evaluation of our experiment we used the Guideline for Ergonomic Haptic Interaction Design (GEHID) developed by L. M. Muñoz, P. Ponsa, and A. Casals \cite{Munoz12}. The guide provides an approach that relates human factors to robotics technology and is based on measures that characterize the haptic interfaces, user’s capabilities and the objects to manipulate. We chose this guide as it is a method that aims to cover aspects of haptic interface design and human-robot interaction in order to improve the design and use of human-robot haptic interfaces in telerobotics applications.
+
+The method to be followed for using the GEDIH guide consists in forming a focus group composed of experts and designers in order to: analyze the indicator, measure the indicator, obtain the GEDIH global evaluation index and finally offer improvement recommendations in the interface design. After the GEDIH validation a user’s experience test can be prepared in order to measure human-robot metrics (task effectiveness, efficiency and satisfaction)~\cite{Andonovski10}.
+
+In a first step we detailed a set of selected indicators that provide a quantitative and/or qualitative measure of the perceived information by the user from the teleoperated environment. In this case we selected the following indicators:
+\begin{itemize}
+\item \textbf{ReactionForce/Moment}, this indicator measures the variation in the force or moment perceived when contacting with an object or exerting a force over it.
+\item \textbf{Pressure}, in this case the variation in the force perceived under a contact with a surface unit it is measured.
+\item \textbf{Rigidity}, measure the absence of displacement perceived when a force is exerted. 
+\item \textbf{Weight/Inertia}, this indicator measures the resistance that is perceived by user when an object is held statically or is displaced from one place to another.
+\item \textbf{Impulse/Collision}, in this case the indicator measures the variation of the linear momentum that happens when colliding with objects in the teleoperated environment.
+\item \textbf{Vibration}, this indicator measures the variation in the position perceived when an object is manipulated by user.
+\item \textbf{Geometric Properties}, in this case is necessary the perception of the size and shape of the manipulated objects in the teleoperated environment.
+\item \textbf{Disposition}, it is also necessary to measure the perception of the position and orientation of objects.
+\end{itemize}
+
+In the next stage we identified two different ways of moving the game pieces; one is to drag the tab on the board and another is to raise the piece and move it to the target position. The next step is a tasks allocation for these ways of moving objects. 
+
+In the first case, the sequence of basic task involved are:
+\begin{enumerate}
+\item Presence. In order to determine if the object is near the grasping tool.
+\item Grasping. Is the task that allows the operator to grab an object.
+\item Push. Is the task that allows the user to move a game piece by applying a force over it and move it on the board. 
+\item Assembling. In order to put the object in the target position.
+\item Grasping. In this case to release the object.
+\item Presence. In order to release the object.
+\end{enumerate}
+
+In the second case, we identified the following basic tasks:
+\begin{enumerate}
+\item Presence. In order to determine if the object is near the grasping tool.
+\item Grasping. Is the task that allows the operator to grab an object.
+\item Translating. In order to move the object towards the target place.
+\item Assembling. In order to put the object in the target position.
+\item Grasping. In this case to release the object.
+\item Presence. In order to release the object.
+\end{enumerate}
+
+In both cases we observed that previous to the first and last task, the movement of the teleoperated does not requires haptic feedback.
+
+The third step is to establish a clear relationship between selected indicators and basic haptic tasks. 
+
 \section{Conclusion}
 % CAMINO?
 
@@ -131,6 +182,13 @@ C.H.~King, M.O.~Culjat, M.L.~Franco, C.E.~Lewis, E.P.~Dutson, W.S.~Grundfest and
 
 \bibitem{Kron04}
 A.~Kron, G.~Schmidt, B.~Petzold, M.I.~Zah, P.~Hinterseer and E.~Steinbach, \emph{Disposal of explosive ordnances by use of a bimanual haptic telepresence system}, In Proceedings of the IEEE International Conference on Robotics and Automation (ICRA 04).\hskip 1em plus 0.5em minus 0.4em\relax pp. 1968--1973, 2004.
+
+\bibitem{Munoz12}
+L.M.~Mu{\~{n}}oz, P.~Ponsa and A.~Casals, \emph{Design and Development of a Guideline for Ergonomic Haptic Interaction}, In Human-Computer Systems Interaction: Backgrounds and Applications 2: Part 2, Z.~Hippe and J.L.~Kulikowski and T.~Mroczek, Eds. Springer Berlin Heidelberg, pp. 15--19, 2012.
+
+\bibitem{Andonovski10}
+B.~Andonovski, P.~Ponsa and A.~Casals, \emph{Towards the development of a haptics guideline in human-robot systems}, Human System Interactions (HSI), 2010 3rd Conference on, Rzeszow, pp. 380--387, 2010.
+
 
 \end{thebibliography}
 \end{document}
