Corrected text of the table and in the last paragraph

--- a/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
+++ b/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
@@ -141,7 +141,7 @@ In the second case, we identified the following basic tasks:
 
 In both cases we observed that previous to the first and last task, the movement of the teleoperated does not requires haptic feedback.
 
-The third step is to establish a clear relationship between selected indicators and basic haptic tasks. Table \ref{tabla_1} show this relation relationship. The first column shows the basic tasks involved in our  experiment and the specific indicators are placed in the second column. But also we consider for the design of haptic interface that different tasks have different requirements, both the haptic device as the robot. For example, in the translating task we need game piece weight perception that gives haptic force sensor and grasping force provided by the corresponding robot sensor. Moreover, in our experiment, we use a visual feedback provided by two cameras in the robot to determine the position of the game pieces and the operator can determine the necessary directions and trajectories to actions to perform the desired task. 
+The third step is to establish a clear relationship between selected indicators and basic haptic tasks. Table \ref{tabla_1} show this relation relationship. The first column shows the basic tasks involved in our  experiment and the specific indicators are placed in the second column. But also we consider for the design of haptic interface that different tasks have different requirements, both the haptic device as the robot. For example, in the translating task we need game piece weight perception that gives haptic force sensor and grasping force provided by the corresponding robot sensor. Moreover, in our experiment, we use a visual feedback provided by two cameras in the robot to determine the position of the game pieces and the operator can determine the necessary directions and trajectories to perform the desired task. 
 
 
 
